--- a/index.html
+++ b/index.html
@@ -35,16 +35,131 @@
     </div>
 
     <main class="middle">
-        <div class="container">
-            middle content is here
-        </div>
+                    <div class="container">
+                     <div class="blocks">
+              <div class="block">
+                  <div class="image"><img src="image/photo1.jpg" height="180" width="319" alt=""></div>
+                  <div class="person">
+                      <div class="photo"><img src="image/person1.jpg" height="50" width="50" alt=""></div>
+                      <div class="text">
+                          <div class="phrase">You neglect your friends</div>
+                          <div class="info">Valerie Adams. Moldova. 19.</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="block">
+                  <div class="image"><img src="image/photo1.jpg" height="180" width="319" alt=""></div>
+                  <div class="person">
+                      <div class="photo"><img src="image/person1.jpg" height="50" width="50" alt=""></div>
+                      <div class="text">
+                          <div class="phrase">You neglect your friends</div>
+                          <div class="info">Valerie Adams. Moldova. 19.</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="block">
+                  <div class="image"><img src="image/photo1.jpg" height="180" width="319" alt=""></div>
+                  <div class="person">
+                      <div class="photo"><img src="image/person1.jpg" height="50" width="50" alt=""></div>
+                      <div class="text">
+                          <div class="phrase">You neglect your friends</div>
+                          <div class="info">Valerie Adams. Moldova. 19.</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                     <div class="news">
+                          <div class="one">
+                              <div class="img"><a href="#"><img src="image/a.jpg" height="89" width="89" alt=""></a></div>
+                              <div class="text">
+                                  <time>Oct 18</time>
+                                  <p><a href="#">I would like to avoid making these mistakes.</a></p>
+                              </div>
+                          </div>
+                          <div class="one">
+                              <div class="img"><a href="#"><img src="image/a.jpg" height="89" width="89" alt=""></a></div>
+                              <div class="text">
+                                  <time>Oct 8</time>
+                                  <p><a href="#">But how do you avoid mistakes you make by default?</a></p>
+                              </div>
+                          </div>
+                          <div class="one">
+                              <div class="img"><a href="#"><img src="image/a.jpg" height="89" width="89" alt=""></a></div>
+                              <div class="text">
+                                  <time>Oct 2</time>
+                                  <p><a href="#">Ideally you transform your life so it has other defaults.</a></p>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="featured">
+                    <div class="title">Featured on:</div>
+                    <ul>
+                        <li><a href="#"><img src="image/logo-new-texas-times.png" height="28" width="262" alt=""></a></li>
+                        <li><a href="#"><img src="image/logo-wooden.png" height="29" width="147" alt=""></a></li>
+                        <li><a href="#"><img src="image/logo-vremya.png" height="22" width="112" alt=""></a></li>
+                        <li><a href="#"><img src="image/logo-open-book.png" height="29" width="217" alt=""></a></li>
+                        <li><a href="#"><img src="image/logo-twitter.png" height="29" width="36" alt=""></a></li>
+                    </ul>
+                    </div>
+                    </div>
+                    </div>                 
     </main>
-
-    <footer class="footer">
-        <div class="container">
-            footer is here
-        </div>
-    </footer>
+<footer class="footer">
+    <div class="container">
+        <nav class="footer-nav">
+            <div class="column">
+                <div class="title">MAIN</div>
+                <ul>
+                    <li><a href="#">Start Here</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Meet Us</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="column">
+                <div class="title">COMPANY</div>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Help</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Jobs</a></li>
+                    <li><a href="#">Directory</a></li>
+                </ul>
+            </div>
+            <div class="column">
+                <div class="title">ONE MORE</div>
+                <ul>
+                    <li><a href="#">Meetups</a></li>
+                    <li><a href="#">Handbook</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">API</a></li>
+                    <li><a href="#">Equipment</a></li>
+                </ul>
+            </div>
+            <div class="column">
+                <div class="title">THE LAST ONE</div>
+                <ul>
+                    <li><a href="#">Meetups</a></li>
+                    <li><a href="#">Handbook</a></li>
+                    <li><a href="#">Privacy</a></li>
+                    <li><a href="#">API</a></li>
+                    <li><a href="#">Equipment</a></li>
+                </ul>
+            </div>
+        </nav>
+        <ul class="soc">
+        <li><a class="soc-twitter" href="#"></a></li>
+        <li><a class="soc-facebook" href="#"></a></li>
+        <li><a class="soc-googleplus soc-icon-last" href="#"></a></li>
+        </ul>
+    <div class="copyright">
+    <p>© 2013 be happy<br>
+        <a href="#">Privacy Policy</a> <a href="#">Terms of Service</a>
+    </p>
+    </div>
+    </div>
+</footer>
     </body>
 </html>
 
